--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,9 +29,9 @@
                 <data android:mimeType="application/dk.sdu.mmmi.ap.g14.nfcbomber" />
             </intent-filter>
         </activity>
-        <activity android:name=".Lobby">
-        </activity>
-        <activity android:name=".Game"></activity>
+        <activity android:name=".Lobby"></activity>
+        <activity android:name=".Game" />
+        <activity android:name=".ScoreboardActivity"></activity>
     </application>
 
 </manifest>
